refactors + bug fixes.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "todo-backend",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon start "
@@ -11,6 +12,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "dotenv": "^16.4.7",
     "env": "^0.0.2",
     "express": "^4.21.2",
     "mongodb": "^6.12.0",
